<resources>
    <string name="app_name">Fire Donor</string>
    <string name="sign_up">Sign Up.</string>
    <string name="lets_get_you_an_account">Lets get you an account.</string>
    <string name="your_name">Your Name.</string>
    <string name="next">next.</string>
    <string name="nice_next_your_email_address">Nice! next, your email address.</string>
    <string name="your_email">Your Email.</string>
    <string name="great_next_you_ll_need_a_password">Great! Next, you\'ll need a password.</string>
    <string name="your_new_password">Your New Password.</string>
    <string name="retype_that_new_password_please">Retype that new password, please.</string>
    <string name="retype_that_password">Retype that password.</string>
    <string name="no_internet_connection">You\'ll need an internet connection to continue.</string>
    <string name="lets_get_you_signed_in">Lets get you signed in.</string>
    <string name="and_your_password">And your password.</string>
    <string name="your_password">Your Password.</string>
    <string name="finish">FINISH</string>
    <string name="log_in">LOG IN</string>
    <string name="something_went_wrong">Something went wrong, retry in a few moments.</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here.</string>
    <string name="have_an_account_sign_in_here">Have an account? Sign in here.</string>
    <string name="failed_sign_in">That didn\'t work, check your credentials and retry.</string>
    <string name="begin">Begin.</string>
    <string name="let_s_set_up_your_new_donation">Let\'s set up your new donation.</string>
    <string name="describe_the_name_and_weight_of_the_food_item_being_donated">Describe the name and weight of the food item being donated.</string>
    <string name="_25_kilos_of_something">25 Kilos of Something</string>
    <string name="next_some_photos_or_pictures_of_the_donated_items">Next, some photos or pictures of the donated items.</string>
    <string name="add_a_photo">Add a photo.</string>
    <string name="take_a_photo">Take a Photo.</string>
    <string name="Continue">CONTINUE.</string>
    <string name="next_details_of_the_donation_be_as_descriptive_as_you_like">Next, details of the donation. Be as descriptive as you like.</string>
    <string name="details_come_here">Details come here…</string>
    <string name="next_the_location_open_the_map_and_set_the_location_where_your_donated_items_are_stored">Next, the location. Open the map, and set the location where your donated items are stored.</string>
    <string name="open_map">OPEN MAP.</string>
    <string name="confirm_all_the_details_are_right_before_finishing">Confirm all the details are right before finishing.</string>
    <string name="location_area">Location area:</string>
    <string name="location_set">Location Set.</string>
    <string name="set_details">Set Details.</string>
    <string name="location_details_blah_blah_blah">Location details blah blah blah…</string>
    <string name="your_item_has_been_listed_it_shouldn_t_be_long_before_requests_come_in">Your item has been listed! It shouldn\'t be long before requests come in.</string>
    <string name="upload">Upload.</string>
    <string name="max_images">Only 5 images or less are needed</string>
    <string name="details_needed">You need to describe what you\'re donating</string>
    <string name="add_at_least_one_image">Add at least one image.</string>
    <string name="set">set</string>
    <string name="set_the_location_of_the_donated_items">Set the location for the donated items.</string>
    <string name="fire_donor">Fire Donor.</string>
    <string name="my_donations">My Donations.</string>
    <string name="new_donation">New Donation.</string>
    <string name="my_requests">My Requests.</string>
    <string name="request">Request.</string>
    <string name="donation_details">Donation Details.</string>
    <string name="listed_on">Listed on:</string>
    <string name="organisation_name">Organisation name.</string>
    <string name="these_details_will_be_passed_to_the_donor">These details will be passed to the donor.</string>
    <string name="your_organisation_name">Your organisation name.</string>
    <string name="organisation_location">Organisation Location</string>
    <string name="next_your_location_for_delivery">Next, your location for delivery.</string>
    <string name="set_location">Set Location.</string>
    <string name="pickup_date">Pickup Date.</string>
    <string name="next_the_date_of_pick_up">Next, the date of pick up.</string>
    <string name="open_calendar">Open Calendar.</string>
    <string name="expected_vehicle_for_delivery">Expected Vehicle for Delivery.</string>
    <string name="finally_the_delivery_vehicle_details_please_describe_the_delivery_vehicle_and_its_number_plate">Finally, the delivery vehicle details. Please describe the delivery vehicle and its number plate.</string>
    <string name="a_2006_isuzu_model_d_truck">A 2006 Isuzu Model D Truck.</string>
    <string name="kbr_035_y">KBR 035 Y</string>
    <string name="confirm_everything">Confirm Everything.</string>
    <string name="confirm_all_the_details_and_information_before_sending_the_request">Confirm all the details and information before sending the request.</string>
    <string name="name">Name</string>
    <string name="pick_up_date">Pick Up Date.</string>
    <string name="pick_up_vehicle">Pick Up Vehicle.</string>
    <string name="send_request">Send Request.</string>
    <string name="request_has_been_sent">Request has been sent.</string>
    <string name="your_request_has_been_sent_you_may_periodically_check_the_status_of_your_request_in_the_my_requests_page">Your request has been sent, you may periodically check the status of your request in the My-Requests page.</string>
    <string name="edit_my_donation">Edit My Donation…</string>
    <string name="food_items_being_donated">Food items being donated.</string>
    <string name="items_name_and_mass">items name and mass</string>
    <string name="donation_details_blah_blah_blah">Donation details blah blah blah…</string>
    <string name="near_nairobi_cbd">Near Nairobi CBD.</string>
    <string name="requests">Requests.</string>
    <string name="organisation">Organisation</string>
    <string name="location">Location.</string>
    <string name="pick_up_vehicle_to_expect">Pick up vehicle to expect.</string>
    <string name="accept">Accept</string>
    <string name="here_are_all_your_requested_donations">Here are all your requested donations.</string>
    <string name="view">View.</string>
    <string name="pending">Pending.</string>
    <string name="status">Status.</string>
    <string name="delete">Delete.</string>
    <string name="account_username">Account Username.</string>
    <string name="my_email">My Email.</string>
    <string name="online_since">Online Since</string>
    <string name="logout">Logout.</string>
    <string name="patent_pending">©, Patent pending.</string>
    <string name="my_account">My Account.</string>
    <string name="by_user">By user:</string>
    <string name="uploaded_on">Uploaded on:</string>
    <string name="loading">Loading...</string>
    <string name="donation_listed_on">Donation listed on</string>
    <string name="just_near">Just near</string>
    <string name="close">Close.</string>
    <string name="you_need_to_set_a_name">You need to set a name</string>
    <string name="please_set_a_location_by_clicking_the_map_icon">Please set a location by clicking the map icon</string>
    <string name="please_set_a_date_by_clicking_the_date_icon">Please set a date for pickup.</string>
    <string name="a_description_is_needed">A description is needed.</string>
    <string name="a_number_plate_is_needed">a number plate is needed.</string>
    <string name="shareText">"Share The App."</string>
    <string name="shareText2">"Hey, check out this interesting app called FireDonor."</string>
    <string name="new_item_name_and_weight">New item name and weight.</string>
    <string name="done">Done.</string>
    <string name="accepted">Accepted.</string>


    <string name="feedbacktype">Feedback Type</string>
    <string name="feedbacktype1">Suggestion</string>
    <string name="feedbacktype2">Gripe</string>
    <string name="feedbacktype3">Praise</string>
    <string name="feedbacktype4">Bug</string>
    <string name="feedbacktype5">Question</string>

</resources>
