<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/dialog_bg"
    android:layout_margin="10dp"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/organisation"
            android:textColor="@color/titlecolor"
            android:textSize="17sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:text="Near Nairobi CBD."
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/location"
            android:textColor="@color/titlecolor"
            android:textSize="17sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:text="Nairobi."
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/pick_up_date"
            android:textColor="@color/titlecolor"
            android:textSize="17sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:text="12 August, 2019."
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/pick_up_vehicle_to_expect"
            android:textColor="@color/titlecolor"
            android:textSize="17sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:text="A red pick up Isuzu truck, KBR 035B."
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:text="@string/accept"
                android:background="null"
                android:textColor="@color/colorPrimaryDark"
                android:layout_alignParentEnd="true"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>