<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_bg"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <!--Donation item-->
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:layout_width="50dp"
                    android:layout_marginEnd="10dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    android:layout_height="50dp"
                    app:cardCornerRadius="14dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:scaleType="fitXY"
                        android:layout_height="match_parent" />

                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/items_name_and_mass"
                        android:textSize="15sp"
                        android:textColor="@color/titlecolor"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="Listed on blah blah"
                        android:textSize="13sp"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <!--Organisation name-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/titlecolor"
                    android:textSize="17sp"
                    android:text="@string/organisation_name"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="250dp"
                    android:textSize="13sp"
                    android:text="@string/organisation"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <ImageView
                android:layout_width="30dp"
                android:src="@drawable/ic_action_edit"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_height="30dp" />

        </RelativeLayout>

        <!--Pick up date-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/titlecolor"
                    android:textSize="17sp"
                    android:text="@string/pick_up_date"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="250dp"
                    android:textSize="13sp"
                    android:text="12 June, 2019."
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <ImageView
                android:layout_width="30dp"
                android:src="@drawable/ic_action_edit"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_height="30dp" />

        </RelativeLayout>

        <!--Pick up vehicle-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/titlecolor"
                    android:textSize="17sp"
                    android:text="@string/pick_up_vehicle"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="250dp"
                    android:textSize="13sp"
                    android:text="A red Isuzu truck, KBR 135Y."
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <ImageView
                android:layout_width="30dp"
                android:src="@drawable/ic_action_edit"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_height="30dp" />

        </RelativeLayout>

        <!--organisation location-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/titlecolor"
                    android:textSize="17sp"
                    android:text="@string/organisation_location"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="250dp"
                    android:textSize="13sp"
                    android:text="Around blab blah..."
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/view"
                android:textSize="17sp"
                android:translationX="-10dp"
                android:textColor="@color/titlecolor"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <!--status and delete button-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/titlecolor"
                    android:textSize="17sp"
                    android:text="@string/status"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="250dp"
                    android:textSize="13sp"
                    android:text="@string/pending"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/delete"
                android:textSize="17sp"
                android:textColor="@color/titlecolor"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>