<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/activity_login_coordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/loginLinearLayout"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="80dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/firedonor"
                android:layout_marginBottom="10dp"
                android:layout_height="80dp" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/sign_up"
                android:textSize="25sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/titlecolor"
                android:layout_height="wrap_content" />

            <!--The layouts that transition or change, contains email fields and such-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Email field-->
                <LinearLayout
                    android:id="@+id/emailLinearLayout"
                    android:layout_width="match_parent"
                    android:translationX="00dp"
                    android:visibility="visible"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/lets_get_you_signed_in"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:inputType="textEmailAddress"
                        android:background="@android:color/white"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/hintcolor"
                        android:hint="@string/your_email"
                        android:padding="10dp"
                        android:layout_height="wrap_content" />


                </LinearLayout>

                <!--Password field-->
                <LinearLayout
                    android:id="@+id/passwordLinearLayout"
                    android:layout_width="match_parent"
                    android:translationX="400dp"
                    android:visibility="gone"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/and_your_password"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:inputType="textPassword"
                        android:background="@android:color/white"
                        android:textColorHint="@color/hintcolor"
                        android:hint="@string/your_password"
                        android:padding="10dp"
                        android:layout_height="wrap_content" />


                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/previousButton"
                    android:layout_width="50dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_action_back"
                    android:background="@null"
                    android:layout_marginRight="10dp"
                    android:layout_height="50dp" />

                <Button
                    android:id="@+id/nextButton"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:background="@null"
                    android:text="@string/next"
                    android:textColor="@color/titlecolor"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <TextView
                android:id="@+id/signUpLink"
                android:layout_width="match_parent"
                android:text="@string/don_t_have_an_account_sign_up_here"
                android:textStyle="bold"
                android:textColor="@color/titlecolor"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/progressBarRelativeLayout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBarSignUp"
                style="?android:attr/progressBarStyle"
                android:layout_centerInParent="true"
                android:layout_width="60dp"
                android:layout_height="60dp"/>

        </RelativeLayout>

    </RelativeLayout>



</android.support.design.widget.CoordinatorLayout>